--- a/About/directory.html
+++ b/About/directory.html
@@ -108,7 +108,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Eric Owen</li>
-					<li class="title">Executive Director of Library Services<br>Campus Security Authority (CSA) Contact</li>
+					<li class="title">University Librarian<br>Campus Security Authority (CSA) Contact</li>
 					<li class="phone"><a href="tel:+19362941612">936.294.1612</a></li>
 					<li class="email"><a href="mailto:ericowen@shsu.edu">ericowen@shsu.edu</a></li>
 				</ul>
