--- a/About/directory.html
+++ b/About/directory.html
@@ -574,6 +574,21 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Wendy Black">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Wendy Black</li>
+					<li class="title">Access Services Assistant Supervisor (Stacks Maintenance)</li>
+					<li class="phone"><a href="tel:+19362943575">936.294.3575</a></li>
+					<li class="email"><a href="mailto:wnb009@shsu.edu">wnb009@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
 				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Carlie Chapman">
 			</div>
 			<div class="cell large-9">
@@ -646,7 +661,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Ethan Elliott">
@@ -660,7 +675,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
