--- a/About/feedback.html
+++ b/About/feedback.html
@@ -5,11 +5,13 @@
 <p>&nbsp;</p>
 <p><strong>Are you trying to do something different? </strong>Here are some other forms that might help you:</p>
 <ul>
-<li><a href="/askalibrarian/index.html">Ask a question / get help</a>.</li>
-<li><a href="/services/renew.html">Renew a book</a> <em>or</em> <a href="/services/bookhold.html">place a hold on a book</a>.</li>
-<li><a href="/services/texshare/">Apply for a TexShare card</a>.</li>
-<li><a href="https://ezproxy.shsu.edu/login?url=https://library.shsu.edu/services/faculty/resourcerequest.html">Recommend a Purchase</a>.</li>
-<li><a href="/services/faculty/#instinfo">Request librarian instruction/embedded librarian</a> <em>(for faculty)</em>.</li>
-<li><a href="https://shsu.libanswers.com/eresources/">Report a catalog error</a>.</li>
-<li><a href="https://shsu.libanswers.com/eresources/">Report a problem with a database or online journal</a>.</li>
+    <li><a href="/askalibrarian/index.html">Ask a question / get help</a>.</li>
+    <li><a href="/services/renew.html">Renew a book</a> <em>or</em> <a href="/services/bookhold.html">place a hold on a book</a>.</li>
+    <li><a href="/services/texshare/">Apply for a TexShare card</a>.</li>
+    <li><a href="https://ezproxy.shsu.edu/login?url=https://library.shsu.edu/services/faculty/resourcerequest.html">Recommend a Purchase</a>.</li>
+    <li><a href="/services/faculty/#instinfo">Request librarian instruction/embedded librarian</a> <em>(for faculty)</em>.</li>
+    <li><a href="https://shsu.libanswers.com/eresources/">Report a catalog error</a>.</li>
+    <li><a href="https://shsu.libanswers.com/eresources/">Report a problem with a database or online journal</a>.</li>
+    <li><a href="https://shsu.libwizard.com/id/54c346748c37110850ebd49b90ad2e6f">Suggest an Event</a>.</li>
+    <li><a href="https://shsu.libwizard.com/id/1285eafa4df6f0c0a1c7a32e40ff868e">Suggest a Display</a>.</li>
 </ul>
