--- a/Services/facultydirect.html
+++ b/Services/facultydirect.html
@@ -1,3 +1,13 @@
+<style>
+    .callout.orange {
+        background-color: #FFECDA;
+        color: #0a0a0a;
+    } 
+</style>
+<div class="callout orange">
+    The ILLiad Interlibrary Loan system will be unavailable during a major upgrade, beginning <strong>Friday 9 May 2025</strong> for approximately 2 weeks. Items may still be returned, and this will be a fine-free grace period. Please contact the ILL office with questions at 936-294-1616, but understand that staff will have highly limited access to account details or actions.
+</div>
+
 <p>Faculty&gt;Direct is a service that offers delivery of articles and books that the Library holds to SHSU faculty members. This service is provided by the <a href="/about/departments/interlibrary/index.html">Interlibrary Services department</a> of the Newton Gresham Library.</p>
 <p>Faculty&gt;Direct is available only to SHSU faculty members. This service was designed specifically to support the faculty teaching and research activities.</p>
 <p>To use Faculty&gt;Direct, access your <a href="https://ezproxy.shsu.edu/login?url=http://oclc.shsu.edu/">ILLiad</a> account (the same account you use for Interlibrary Loan) and make sure your User Profile’s delivery location is set to Faculty Direct*  before requesting the items you need. Articles and pages from books will be delivered electronically whenever possible; physical materials will be checked out to your account and delivered to your office.</p>
