--- a/Services/ill.html
+++ b/Services/ill.html
@@ -9,6 +9,9 @@
 <!--<div class="callout">
     The ILLiad Interlibrary Loan system is unavailable due to maintenance. Please contact the ILL office with questions at 936-294-1616.
 </div>-->
+<div class="callout orange">
+   The ILLiad Interlibrary Loan system will be unavailable during a major upgrade, beginning <strong>Friday 9 May 2025</strong> for approximately 2 weeks. Items may still be returned, and this will be a fine-free grace period. Please contact the ILL office with questions at 936-294-1616, but understand that staff will have highly limited access to account details or actions.
+</div>
 
 <p>Interlibrary Loan is a service of the <a href="/about/departments/interlibrary/index.html">Interlibrary Services department</a>: (936) 294-1616, <a href="mailto:lib_ill@shsu.edu">lib_ill@shsu.edu</a>.</p>
 <p>Interlibrary Loan serves to connect library patrons to more information in more ways.</p>
@@ -21,7 +24,7 @@
 <div class="callout green"><p><a href="https://shsu.idm.oclc.org/login?url=https://oclc.shsu.edu/">Log into ILLiad now</a></p></div>
 <p><a href="https://shsulibraryguides.org/ill"><strong>View detailed instructions, policies, and more</strong></a></p>
 <p>ILL is open 8 am to 5 pm Monday through Friday. During off hours, please email or leave a voicemail to have your needs addressed as soon as possible on the next business day.</p>
-<p><strong style="color: #e00; font-size: 1.2rem;">Administrative policy requires that all patrons picking up items in Interlibrary Services must show a University ID (Bearkat OneCard).</strong></p>
+<p><strong style="color: #e00; font-size: 1.2rem;">All students picking up items at the library are required to show University ID (Bearkat OneCard). Faculty/staff are required to present a photo ID (such as Bearkat OneCard or drivers license).</strong></p>
 <h2>For Borrowing Libraries</h2>
 <p>To request via an OCLC system, please use <strong>OCLC symbol SHH</strong>. Please refer to the OCLC Policy Directory for more details.</p>
 <p>All other requests need to be submitted via <a href="http://www.ala.org/rusa/sites/ala.org.rusa/files/content/sections/stars/resources/ALA_ILL_Request_Form.pdf">ALA ILL request form</a>, faxed to 936-294-3615, or emailed to <a href="mailto:lib_ill@shsu.edu">lib_ill@shsu.edu</a>. (We do not allow ILLiad access to persons, libraries, or institutions outside of Sam Houston State University.)</p>
